# LeadBot

./: .env.yaml.example  .gitignore  README.md  alembic.ini  pyproject.toml
src/leadbot/: __main__.py  config.py  core.py  loader.py  old_db.py
src/leadbot/database/: db_manager.py  models.py
src/leadbot/database/cruds/: __init__.py  accounts.py  spam_filter.py
src/leadbot/migrations/: env.py
src/leadbot/migrations/versions/: 4ea9f7d728ff_добавил_таблицы_с_ингнирированием_лидов_.py  60c601d59a93_немного_поменял_названия_таблиц.py  6cc967e05dd1_добавил_таблицы_с_ингнирированием_лидов_.py  90301f6074b6_создал_бд_с_таблицей_аккаунтов.py
src/leadbot/utils/: json_proxy.py
