[project]
name = "leadbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.14.1",
    "easygui>=0.98.3",
    "kurigram>=2.1.37",
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.37",
    "tgcrypto>=1.2.5",
    "uvloop>=0.21.0",
]

[project.scripts]
leadbot = "leadbot.__main__:main"
add_account = "leadbot.__main__:add_account"

[tool.uv]
package = true
